--- a/index.html
+++ b/index.html
@@ -6,12 +6,18 @@
     <title>Sentilympics Dashboard</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <script>
+      // Global shim for local execution environments
+      window.process = window.process || { env: {} };
+    </script>
     <style>
       body {
         font-family: 'Inter', sans-serif;
-        background-color: #f3f4f6;
+        background-color: #fafafa;
+        margin: 0;
+        padding: 0;
       }
-      /* Custom scrollbar for chat */
+      /* Custom scrollbar for minimal chat experience */
       .scrollbar-hide::-webkit-scrollbar {
           display: none;
       }
@@ -19,22 +25,28 @@
           -ms-overflow-style: none;
           scrollbar-width: none;
       }
+      ::selection {
+        background-color: #f0f0f0;
+        color: #000;
+      }
     </style>
-  <script type="importmap">
-{
-  "imports": {
-    "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "d3": "https://esm.sh/d3@^7.9.0"
-  }
-}
-</script>
-</head>
+    <script type="importmap">
+    {
+      "imports": {
+        "@google/genai": "https://esm.sh/@google/genai@^1.36.0",
+        "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
+        "react/": "https://esm.sh/react@^19.2.3/",
+        "react": "https://esm.sh/react@^19.2.3",
+        "react-dom/": "https://esm.sh/react-dom@^19.2.3/",
+        "recharts": "https://esm.sh/recharts@^3.6.0",
+        "d3": "https://esm.sh/d3@^7.9.0"
+      }
+    }
+    </script>
+  </head>
   <body>
     <div id="root"></div>
+    <!-- Explicitly load the entry point module for local development -->
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
